# nba_api_airflow

./: .env.example  .gitignore  CLAUDE.md  airflow.cfg  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
dags/: nba_data_pipeline.py  nba_games_mongo.py  nba_players_mongo.py  nba_recent_shots_mongo.py  nba_teams_mongo.py
example/: get_games.py  get_live_games.py  get_players.py  get_playoff_games.py  get_schedule.py  get_shot_chart.py  get_teams.py
history-data/: fetch_all_shots.py  get_game_shots.py  get_historical_games.py
